Add images + flex box

--- a/index.html
+++ b/index.html
@@ -39,10 +39,68 @@
 
         </div>
 
+
+
         <footer class="footer">
           Footer
         </footer>
     </div>
+
+        <div class="card-wrapper">
+            <div class="card">
+                <div class="card__image">
+                    <img src="img/cat-1.jpg" alt="Stripe cat with paw." title="Stripe cat with paw.">
+                </div>
+                <div class="card__content">
+                    <h2>Heading</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut</p>
+                </div>
+                <div class="card__read-more">
+                    <button>Read More</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card__image">
+                    <img src="img/cat-2.jpg" alt="Grey stripe cat." title="Grey stripe cat.">
+                </div>
+                <div class="card__content">
+                    <h2>Heading</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut</p>
+                </div>
+                <div class="card__read-more">
+                    <button>Read More</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card__image">
+                    <img src="img/cat-3.jpg" alt="Green eye cat." title="Green eye cat.">
+                </div>
+                <div class="card__content">
+                    <h2>Heading</h2>
+                    <p>Lorem ipsum dolor sit amet</p>
+                </div>
+                <div class="card__read-more">
+                    <button>Read More</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card__image">
+                    <img src="img/cat-4.jpg" alt="Grey cat." title="Grey cat.">
+                </div>
+                <div class="card__content">
+                    <h2>Heading</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut</p>
+                </div>
+                <div class="card__read-more">
+                    <button>Read More</button>
+                </div>
+            </div>
+
+
+        </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="js/main.js"></script>
