--- a/index.html
+++ b/index.html
@@ -4,19 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="img/longlogobrownteal.png" type="image/png"/>
-    <title>Lisa Long Homework 1 MMC6145</title>
-    <meta name="Lisa Long Resume" content="Producer, Writer, Movement Teacher and Life's Witness">
+    <title>Lisa Long HW 1 MMC6145</title>
+    <meta name="Lisa Long" content="Producer, Writer, Movement Teacher and Life's Witness">
 
     <link rel="stylesheet" href="css/vendor/normalize.min.css">
     <link rel="stylesheet" href="css/main.css">
-    <!-- this is for typekit proxima nova + reklame fonts -->
-    <script src="https://use.typekit.net/zrg4qwo.js"></script>
-    <script>try{Typekit.load({ async: true });}catch(e){}</script>
 </head>
 <body>
     <div class="grid">
         <div class="head">
-            Header
+            <h1>Header</h1>
         </div>
 
         <aside class="aside">
@@ -39,70 +36,63 @@
 
         </div>
 
-
-
         <footer class="footer">
-          Footer
+          <h2>Footer</h2>
         </footer>
     </div>
 
-        <div class="card-wrapper">
-            <div class="card">
-                <div class="card__image">
-                    <img src="img/cat-1.jpg" alt="Stripe cat with paw." title="Stripe cat with paw.">
-                </div>
-                <div class="card__content">
-                    <h2>Heading</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut</p>
-                </div>
-                <div class="card__read-more">
-                    <button>Read More</button>
-                </div>
+    <div class="card-wrapper">
+        <div class="card">
+            <div class="card__image">
+                <img src="img/cat-1.jpg" alt="Stripe cat with paw." title="Stripe cat with paw.">
             </div>
-
-            <div class="card">
-                <div class="card__image">
-                    <img src="img/cat-2.jpg" alt="Grey stripe cat." title="Grey stripe cat.">
-                </div>
-                <div class="card__content">
-                    <h2>Heading</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut</p>
-                </div>
-                <div class="card__read-more">
-                    <button>Read More</button>
-                </div>
+            <div class="card__content">
+                <h2>Heading</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut</p>
             </div>
-
-            <div class="card">
-                <div class="card__image">
-                    <img src="img/cat-3.jpg" alt="Green eye cat." title="Green eye cat.">
-                </div>
-                <div class="card__content">
-                    <h2>Heading</h2>
-                    <p>Lorem ipsum dolor sit amet</p>
-                </div>
-                <div class="card__read-more">
-                    <button>Read More</button>
-                </div>
+            <div class="card__read-more">
+                <button>Read More</button>
             </div>
-
-            <div class="card">
-                <div class="card__image">
-                    <img src="img/cat-4.jpg" alt="Grey cat." title="Grey cat.">
-                </div>
-                <div class="card__content">
-                    <h2>Heading</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut</p>
-                </div>
-                <div class="card__read-more">
-                    <button>Read More</button>
-                </div>
-            </div>
-
-
         </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="js/main.js"></script>
+        <div class="card">
+            <div class="card__image">
+                <img src="img/cat-2.jpg" alt="Grey stripe cat." title="Grey stripe cat.">
+            </div>
+            <div class="card__content">
+                <h2>Heading</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut</p>
+            </div>
+            <div class="card__read-more">
+                <button>Read More</button>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card__image">
+                <img src="img/cat-3.jpg" alt="Green eye cat." title="Green eye cat.">
+            </div>
+            <div class="card__content">
+                <h2>Heading</h2>
+                <p>Lorem ipsum dolor sit amet</p>
+            </div>
+            <div class="card__read-more">
+                <button>Read More</button>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card__image">
+                <img src="img/cat-4.jpg" alt="Grey cat." title="Grey cat.">
+            </div>
+            <div class="card__content">
+                <h2>Heading</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut</p>
+            </div>
+            <div class="card__read-more">
+                <button>Read More</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
